--- a/src/Makefile
+++ b/src/Makefile
@@ -3,11 +3,12 @@ EMULATOR=beam
 EBIN=../ebin
 INCLUDE=../include
 
-ERL_COMPILE_FLAGS += -I$(INCLUDE) +warn_unused_vars +nowarn_shadow_vars +warn_unused_import +strict_record_tests
+ERL_COMPILE_FLAGS += -I$(INCLUDE) +warn_unused_vars +nowarn_shadow_vars +warn_unused_import
 
 SOURCES= \
 	eunit.erl \
 	eunit_lib.erl \
+	eunit_autoexport.erl \
 	eunit_examples.erl
 
 OBJECTS=$(SOURCES:%.erl=$(EBIN)/%.$(EMULATOR)) $(APP_TARGET) $(APPUP_TARGET)
