major changes in internal protocols and timeout handling; new text-based frontend eunit_tty replaces eunit_text
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@53 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ SOURCES= \
 	eunit_test.erl \
 	eunit_lib.erl \
 	eunit_data.erl \
-	eunit_text.erl \
+	eunit_tty.erl \
 	eunit_old.erl \
 	eunit_examples.erl
 
