removed all EUnit 1.0 compatibility code
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@70 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,9 +14,7 @@ SOURCES= \
 	eunit_test.erl \
 	eunit_lib.erl \
 	eunit_data.erl \
-	eunit_tty.erl \
-	eunit_old.erl \
-	eunit_examples.erl
+	eunit_tty.erl
 
 OBJECTS=$(SOURCES:%.erl=$(EBIN)/%.$(EMULATOR)) $(APP_TARGET) $(APPUP_TARGET)
 
