EUnit now runs as a server, registered as eunit_server, which is decoupled from presentation
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@76 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,6 +13,7 @@ ERL_COMPILE_FLAGS += -I$(INCLUDE) +warn_unused_vars +nowarn_shadow_vars +warn_un
 SOURCES= \
 	eunit_autoexport.erl \
 	eunit.erl \
+	eunit_server.erl \
 	eunit_proc.erl \
 	eunit_test.erl \
 	eunit_lib.erl \
