added a generic code watching service, and a prototype 'watch' implementation
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@79 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,6 +18,7 @@ SOURCES= \
 	eunit_test.erl \
 	eunit_lib.erl \
 	eunit_data.erl \
+	eunit_code.erl \
 	eunit_tty.erl
 
 OBJECTS=$(SOURCES:%.erl=$(EBIN)/%.$(EMULATOR)) $(APP_TARGET) $(APPUP_TARGET)
