generic event serialization process, based on code from eunit_tty.erl
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@88 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,6 +15,7 @@ SOURCES= \
 	eunit.erl \
 	eunit_server.erl \
 	eunit_proc.erl \
+	eunit_serial.erl \
 	eunit_test.erl \
 	eunit_lib.erl \
 	eunit_data.erl \
