--- a/src/Makefile
+++ b/src/Makefile
@@ -19,8 +19,8 @@ SOURCES= \
 	eunit_test.erl \
 	eunit_lib.erl \
 	eunit_data.erl \
-	eunit_code.erl \
-	eunit_tty.erl
+	eunit_tty.erl \
+	code_watcher.erl
 
 OBJECTS=$(SOURCES:%.erl=$(EBIN)/%.$(EMULATOR)) $(APP_TARGET) $(APPUP_TARGET)
 
