renamed module code_watcher to code_monitor
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@105 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,7 @@ SOURCES= \
 	eunit_lib.erl \
 	eunit_data.erl \
 	eunit_tty.erl \
-	code_watcher.erl
+	code_monitor.erl
 
 OBJECTS=$(SOURCES:%.erl=$(EBIN)/%.$(EMULATOR)) $(APP_TARGET) $(APPUP_TARGET)
 
