monitoring directories is now also working; added file_monitor.erl to Makefile
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@109 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,7 +20,8 @@ SOURCES= \
 	eunit_lib.erl \
 	eunit_data.erl \
 	eunit_tty.erl \
-	code_monitor.erl
+	code_monitor.erl \
+	file_monitor.erl
 
 OBJECTS=$(SOURCES:%.erl=$(EBIN)/%.$(EMULATOR)) $(APP_TARGET) $(APPUP_TARGET)
 
