added first version of autoload module
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@124 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,8 @@ SOURCES= \
 	eunit_data.erl \
 	eunit_tty.erl \
 	code_monitor.erl \
-	file_monitor.erl
+	file_monitor.erl \
+	autoload.erl
 
 OBJECTS=$(SOURCES:%.erl=$(EBIN)/%.$(EMULATOR)) $(APP_TARGET) $(APPUP_TARGET)
 
