removed some obsolete cruft from the Makefile
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@160 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,4 @@
 
-#DEBUG = -DDEBUG=true
-#TEST = -DNOTEST=true
-
 EMULATOR=beam
 # must have "eunit/ebin" as part of the path for include_lib to work, for now
 EBIN=../../eunit/ebin
@@ -35,4 +32,4 @@ clean:
 	rm -f $(OBJECTS)
 
 $(EBIN)/%.$(EMULATOR):%.erl
-	erlc -pa $(EBIN)  $(DEBUG) $(TEST) -W $(ERL_COMPILE_FLAGS) -o$(EBIN) $<
+	erlc -pa $(EBIN) -W $(ERL_COMPILE_FLAGS) -o$(EBIN) $<
