--- a/src/Makefile
+++ b/src/Makefile
@@ -9,6 +9,7 @@ ERL_COMPILE_FLAGS += -I$(INCLUDE) +warn_unused_vars +nowarn_shadow_vars +warn_un
 
 SOURCES= \
 	eunit_autoexport.erl \
+	eunit_striptests.erl \
 	eunit.erl \
 	eunit_server.erl \
 	eunit_proc.erl \
