added automatic use of co-modules named xxx_tests
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@210 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,7 @@ SOURCES= \
 	eunit_autoexport.erl \
 	eunit_striptests.erl \
 	eunit.erl \
+	eunit_tests.erl \
 	eunit_server.erl \
 	eunit_proc.erl \
 	eunit_serial.erl \
