path to EBIN no longer needs to contain 'eunit/ebin' since include_lib is not used for compiling eunit itself anymore
git-svn-id: http://svn.process-one.net/contribs/trunk/eunit@245 5c723cce-c907-0410-9aa2-ab8348fff7a4

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,9 +2,7 @@
 include ../vsn.mk
 
 EMULATOR=beam
-# must have "eunit/ebin" as part of the path for include_lib to work, for now
-EBIN=../../eunit/ebin
-#EBIN=../ebin
+EBIN=../ebin
 INCLUDE=../include
 
 APP_TARGET=$(EBIN)/eunit.app
